--- a/layouts/index.html
+++ b/layouts/index.html
@@ -156,7 +156,7 @@
     </div>
 
     <!-- Blog section -->
-    <div class="relative px-1 pt-8 pb-4 bg-transparent lg:px-8 lg:pt-12 lg:mb-4 md:mt-12">
+   <!--  <div class="relative px-1 pt-8 pb-4 bg-transparent lg:px-8 lg:pt-12 lg:mb-4 md:mt-12">
         <div class="absolute inset-0">
             <div class="bg-gray-200 dark:bg-gray-900/50 h-1/3 sm:h-2/3"></div>
         </div>
@@ -231,11 +231,11 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     {{ if not .Site.Params.Disable_stay_uptodate}}
     <!-- CTA section -->
-    <div class="relative pb-16 mt-6">
+   <!--  <div class="relative pb-16 mt-6">
         <div class="max-w-md mx-auto px-7 sm:max-w-3xl lg:max-w-7xl">
             <div class="relative px-6 py-10 overflow-hidden shadow-xl bg-primary-500 rounded-2xl sm:px-12 sm:py-20">
                 <div aria-hidden="true" class="absolute inset-0 -mt-72 sm:-mt-32 md:mt-0">
@@ -269,7 +269,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     {{ end }}
 
 </main>
