--- a/layouts/index.html
+++ b/layouts/index.html
@@ -13,6 +13,7 @@
                     <p class="max-w-xl mx-auto mb-6 font-normal text-gray-900 lg:mx-0 xl:mb-2 md:text-lg xl:text-xl dark:text-gray-50">
                         {{ .Site.Params.Description}}
                     </p>
+                    <p class="max-w-xl mx-auto mb-6 font-normal text-gray-900 lg:mx-0 xl:mb-2 md:text-lg xl:text-xl dark:text-gray-50">Au programme : code katas, TDD, débats improvisés.</p>
                 </div>
                 <div class="col-span-6">
                     {{ $hero := resources.GetMatch "images/pages/limouziCoDev.webp" }}
