Open external links in new tabs

--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -115,10 +115,17 @@
                 </div>
             </div>
             {{ else }}
-            <a class="px-4 py-2 mt-2 text-sm font-semibold rounded-lg md:mt-0 md:ml-4 hover:text-white focus:text-white hover:bg-primary-600 focus:bg-primary-700 focus:outline-none focus:shadow-outline"
-                href="{{ .URL | absLangURL }}" title="{{ .Title | default .Name }}">
-                {{ .Name }}
-            </a>
+                {{ if (urls.Parse .URL).IsAbs }}
+                    <a class="px-4 py-2 mt-2 text-sm font-semibold rounded-lg md:mt-0 md:ml-4 hover:text-white focus:text-white hover:bg-primary-600 focus:bg-primary-700 focus:outline-none focus:shadow-outline"
+                        href="{{ .URL | absLangURL }}" title="{{ .Title | default .Name }}" target="_blank">
+                        {{ .Name }}
+                    </a>
+                {{ else }}
+                    <a class="px-4 py-2 mt-2 text-sm font-semibold rounded-lg md:mt-0 md:ml-4 hover:text-white focus:text-white hover:bg-primary-600 focus:bg-primary-700 focus:outline-none focus:shadow-outline"
+                        href="{{ .URL | absLangURL }}" title="{{ .Title | default .Name }}">
+                        {{ .Name }}
+                    </a>
+                {{ end }}
             {{ end }}
             {{ end }}
             {{ if not .Site.Params.Disable_theme_toggle }}
