--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,7 +7,11 @@
         <nav class="flex flex-wrap justify-center -mx-5 -my-2" aria-label="Footer">
             {{ range site.Menus.footer }}
             <div class="px-5 py-2">
-                <a href="{{ .URL | absLangURL }}" class="text-base text-gray-400 hover:text-gray-300">{{ .Name }}</a>
+                {{ if (urls.Parse .URL).IsAbs }}
+                  <a href="{{ .URL | absLangURL }}" class="text-base text-gray-400 hover:text-gray-300" target="_blank">{{ .Name }}</a>
+                {{ else }}
+                  <a href="{{ .URL | absLangURL }}" class="text-base text-gray-400 hover:text-gray-300">{{ .Name }}</a>
+                {{ end }}
             </div>
             {{ end }}
         </nav>
