--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,10 +10,11 @@
                     <h2 class="pb-2 text-3xl font-light text-gray-800 dark:text-gray-300 md:text-4xl">
                         {{ .Site.Params.Moto }}
                     </h2>
+                    {{ range .Site.Params.Description }}
                     <p class="max-w-xl mx-auto mb-6 font-normal text-gray-900 lg:mx-0 xl:mb-2 md:text-lg xl:text-xl dark:text-gray-50">
-                        {{ .Site.Params.Description}}
+                        {{ .text }}
                     </p>
-                    <p class="max-w-xl mx-auto mb-6 font-normal text-gray-900 lg:mx-0 xl:mb-2 md:text-lg xl:text-xl dark:text-gray-50">Au programme : code katas, TDD, débats improvisés.</p>
+                    {{ end }}
                 </div>
                 <div class="col-span-6">
                     {{ $hero := resources.GetMatch "images/pages/limouziCoDev.webp" }}
